--- a/Demos/rprof_demo.ipynb
+++ b/Demos/rprof_demo.ipynb
@@ -41,11 +41,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "sys.path.insert(1, '/user/scratch14_csa/fherwig/repos/PyPPM') \n",
-    "from ppmpy import ppm   \n",
+    "import os,sys\n",
+    "ppmpy_dir = '/user/scratch14_ppmstar-lcse/fherwig/PyPPM'\n",
+    "sys.path.insert(0,ppmpy_dir)  \n",
+    "from ppmpy import ppm   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "# for nice colors, linestyles, etc.\n",
+    "import nugridpy.utils as utils\n",
+    "cb = utils.linestylecb\n",
+    "\n",
     "import logging\n",
     "import math\n",
     "logging.getLogger(\"matplotlib\").setLevel(logging.ERROR)"
@@ -255,6 +269,7 @@
    "source": [
     "The argument `resolution='l'` indicates that we want the low or normal resolution quantity. `FV` and some others are available in double resolution (`'h'`) which has to do with the high-accuracy advection scheme (cf. Woodward+ 15, Appendix). \n",
     "\n",
+    "## What data is avalable in the RProf data?\n",
     "These are the rprof column variables available in high and low resolution:"
    ]
   },
@@ -280,7 +295,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A simple plot"
+    "### Computable quantities\n",
+    "There are a number of computable quantities that take RProf input and calculate new RProf things."
    ]
   },
   {
@@ -289,20 +305,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for nice colors, linestyles, etc.\n",
-    "import nugridpy.utils as utils\n",
-    "cb = utils.linestylecb"
+    "list_columns(rp_set.get_computable_quantities(),cols=3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the first example we are _getting_ the data and then constructing the plot by hand. \n",
-    "\n",
-    "In the second example we use the `rp_plot` method to make the same plot. It is a bit more concise and convenient, and can ensure that plots have the same look throughout the project. \n",
-    "\n",
-    "We are also going to use the rprof method `bound_rad` to find the radius of the convective boundaruy. Of course, all methods such as `get`, `bound_rad` etc have doc strings that can be viewed like this: `rp_set.bound_rad?`\n"
+    "Each of these are computed in a function with a corresponding doc string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp_set.compute_Hp?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A simple plot\n",
+    "There are three ways to plot RProf data:\n",
+    "1. `RprofSet.RProfGui` is an interactive widget (requires the `ipympl` backend)\n",
+    "2. `RprofSet.rp_plot` allows you to plot all column data in the instance against each other; the `RProfGui` method is just a front end to the `rp_plot` method; `rp_plot` can plot both original and computed RProf quantities\n",
+    "3. Getting column data with the `RprofSet.get` method and then plotting with standard `matplotlib`.\n",
+    "We will provide an example for each:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp_set.rprofgui(ifig=112)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rp_set.rp_plot?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp_set.rp_plot?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ifig =3 ; plt.close(ifig); plt.figure(ifig)\n",
+    "rp_set.rp_plot([200,400],'|Ur|',ifig=ifig,logy=True,yylim=(-3.4,-1.9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also _get_ the data and then constructing the plot by hand. "
    ]
   },
   {
@@ -327,29 +402,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rp_set.rp_plot?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifig =3 ; plt.close(ifig); plt.figure(ifig)\n",
-    "rp_set.rp_plot([200,400],'FV',ifig=ifig,logy=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If using `%pylab ipympl` the following will plot into the above figure."
+    "There are numerous methods associated with the `RprofSet` class, for determining entrainment rates, diffusion coefficients and many other things. One of these determines the boundary of the convection zones from radial profiles in a number of ways. The method `RprofSet.bound_rad` finds the radius of the convective boundaruy. Of course, all methods such as `get`, `bound_rad` etc have doc strings that can be viewed like this: `rp_set.bound_rad?` (there `rp_set` is an instance of the `RprofSet` class).\n",
+    "\n",
+    "If using `%pylab ipympl` the following will plot the coordinate of the convective boundary into the above figure."
    ]
   },
   {
@@ -358,12 +416,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(3)\n",
+    "plt.figure(ifig)\n",
     "# where is the convective boundary?\n",
     "conv_bound = rp_set.bound_rad(200,1000,2000,var='FV',criterion='max_grad')\n",
-    "\n",
-    "ymin = -3\n",
-    "ymax = 0\n",
+    "print(conv_bound)\n",
+    "ymin = 1.-3\n",
+    "ymax = 1.0\n",
     "plt.vlines(conv_bound[0],ymin,ymax,color='k',\\\n",
     "           lw = 0.75,linestyle='--',label='Convective Boundary')\n",
     "plt.legend(loc=0)"
@@ -374,7 +432,13 @@
    "metadata": {},
    "source": [
     "## Computable quantities\n",
-    "Many useful things can be computed from radial profiles. And if they are useful they may be available as a computable thing via a method. "
+    "As mentioned above the `RprofSet` class provides methods for many useful computable things via a method. Most computable quantities can be obtained with the method\n",
+    "```Python\n",
+    "RprofSet.compute(quantity)\n",
+    "```\n",
+    "where `quantity` is one of the things in `RprofSet.get_computable_quantities()`. These can also be directly plotted, for convenience with `RprofSet.rp_plot` as shown above. However, there is one caveat that needs to be explained. Some `computable_quantities` methods have arguments that can be quite important. Right now  these are not handed through by `RprofSet.compute`. Each computable quantitiy has its own `RprofSet` method, and unless you know that there are no important arguments it is best to check the doc string of the respective method. \n",
+    "\n",
+    "Below is an example. The Brunt is provided by `compute_N2`. It has an argument that specifies which EOS is to be used. The default is `radeos=True` meaning that the EOS including radiation pressure was used. But if you are plotting a run with ideal gas only, this will give the wrong result. This is demonstrated below for run `M200-1000xht-0xdiff-realEOS-768` which was computed with radiation pressure included, as opposed to `M35` which is ideal gas only. "
    ]
   },
   {
@@ -383,7 +447,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rp_set.get_computable_quantities()"
+    "# run = 'M35-1536'\n",
+    "run = 'M200-1000xht-0xdiff-realEOS-768'\n",
+    "path = os.path.join(dir_repo,dir_project,run,'prfs')\n",
+    "rp_set = ppm.RprofSet(path)\n",
+    "rp_hst = rp_set.get_history()"
    ]
   },
   {
@@ -392,70 +460,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N2 = rp_set.compute('N2',dump)"
+    "rp_set.compute_N2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N2_gas = rp_set.compute_N2(dump,radeos=False)\n",
+    "N2 = rp_set.compute('N2',dump)\n",
+    "R = rp_set.get('R',dump)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ifig =7 ; close(ifig); figure(ifig)\n",
+    "plot(R,N2,'--',label=\"$N^2$ with radiation pressure\")\n",
+    "plot(R,N2_gas,'-',label=\"$N^2$ without radiation pressure\")\n",
+    "legend();title(\"Dump = \"+str(dump))\n",
+    "hlines(0,2500,0,lw=0.2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then you can continue to work with this quantity. The `rp_plot` method will take computable quantities to plot directly:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifig =4 ; plt.close(ifig); plt.figure(ifig)\n",
-    "rp_set.rp_plot(dump,'N2',ifig=ifig)\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifig =5 ; plt.close(ifig); plt.figure(ifig)\n",
-    "rp_set.rp_plot(dump,'A',ifig=ifig)\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1.e6*sqrt(6.e-8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The RProfGUI\n",
-    "There is a very simple GUI to quickly select two dumps and plot one rprof or computable quantity:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rp_set.rprofgui(ifig=19)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Examples\n",
+    "\n",
     "### Calculating a diffusion coefficent a la Jones+ 17\n",
-    "In our paper Jones etal. 2017 we proposed a simple recipy to derive D from radial velocity. "
+    "In our paper Jones etal. 2017 we proposed a simple recipy to derive D from radial velocity. Here is a demonstration how to calculate such a model from the `RProf` data."
    ]
   },
   {
@@ -518,7 +557,7 @@
    "metadata": {},
    "source": [
     "### Radial velocity profile plot\n",
-    "`rp_plot` can plot all velocity components. This plot gives all three components in $\\mathrm{km/s}$. \n"
+    "The `rp_plot` method plots all velocity components. This plot gives all three components in $\\mathrm{km/s}$. \n"
    ]
   },
   {
@@ -544,13 +583,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dump_min,dump_max,sparse=None,None,10   \n",
+    "# define dump range, defaults to all dumps, using every 10th\n",
+    "# use a larger sparse factor initially for speedy \"first look\"\n",
+    "# then refine \n",
+    "dump_min,dump_max,sparse=None,None,20   \n",
+    "\n",
+    "# variable to be shown\n",
     "var = '|U|'\n",
-    "rmin,rmax = 100,150\n",
+    "\n",
+    "# radial range over which to average\n",
+    "rmin,rmax = 1000,1250\n",
+    "\n",
+    "# plotting parameters\n",
     "ylim1,ylim2 = None,None\n",
     "logy = False\n",
     "save_pdf = False\n",
-    "\n",
     "tvar = 'time(mins)'\n",
     "NDump =rp_hst.get('NDump')\n",
     "dumps = NDump[dump_min:dump_max:sparse]"
@@ -601,6 +648,22 @@
     "    tight_layout()\n",
     "    savefig(\"NDump-\"+var+\".pdf\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
