small updates to rprof and MomsData demos

--- a/Demos/rprof_demo.ipynb
+++ b/Demos/rprof_demo.ipynb
@@ -7,7 +7,16 @@
     "# Examples of RProf analysis\n",
     "This is the radial profile analysis for PPMstar version 2.\n",
     "\n",
-    "This notebook requires PyPPM version `github version v0.92 (Nov 26, 2019)`"
+    "This notebook has been tested with PPMstarHub version 1.2.6."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
    ]
   },
   {
@@ -418,13 +427,31 @@
    "source": [
     "plt.figure(ifig)\n",
     "# where is the convective boundary?\n",
-    "conv_bound = rp_set.bound_rad(200,1000,2000,var='FV',criterion='max_grad')\n",
+    "conv_bound = rp_set.bound_rad(dump,1000,2000,var='FV',criterion='max_grad')\n",
     "print(conv_bound)\n",
     "ymin = 1.-3\n",
     "ymax = 1.0\n",
     "plt.vlines(conv_bound[0],ymin,ymax,color='k',\\\n",
-    "           lw = 0.75,linestyle='--',label='Convective Boundary')\n",
+    "           lw = 0.75,linestyle='--',label='Conv Bound max_grad FV')\n",
     "plt.legend(loc=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(ifig)\n",
+    "# where is the convective boundary?\n",
+    "conv_bound = rp_set.bound_rad(dump,1000,2000,var='FV',criterion='value', var_value=0.1)\n",
+    "print(conv_bound)\n",
+    "ymin = 1.-3\n",
+    "ymax = 1.0\n",
+    "plt.vlines(conv_bound[0],ymin,ymax,color='k',\\\n",
+    "           lw = 0.75,linestyle=':',label='Conv Bound FV=0.1')\n",
+    "plt.legend(loc=0)\n",
+    "xlim(1400,1600)"
    ]
   },
   {
@@ -657,6 +684,13 @@
    "source": [
     "pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
