check and update Mollweide and Sluce guis

--- a/Demos/Mollweide_gui.ipynb
+++ b/Demos/Mollweide_gui.ipynb
@@ -9,34 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/user/scratch14_ppmstar/bamcewan/repos/PyPPM/ppmpy/ppm.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -47,7 +31,7 @@
     "# if you make changes to the ppmpy module (e.g. add your analysis methods via a pull \n",
     "# request) in the https://github.com/PPMstar/PyPPM repo you may want use that \n",
     "# updated version\n",
-    "sys.path.insert(0, '/user/scratch14_ppmstar/bamcewan/repos/PyPPM/')\n",
+    "sys.path.insert(0, '/user/scratch14_ppmstar-lcse/fherwig/PyPPM')\n",
     "from ppmpy import ppm\n",
     "print(inspect.getfile(ppm))\n",
     "\n",
@@ -56,27 +40,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50fb8464185d4c46aa340f171754583e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('/home/user/data/ASD…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "base_dir = os.getcwd() + '/data/ASDR/PPMstar/'\n",
+    "The next cell will scan the ASDR data and find runs that have the required Moms and Rprof data needed for the Moms GUI. This takes a moment. If you know what you want you can just hardwire the directory variable `rprof_dir` and `moms_dir` and skip this step. Else select a run in the drop-down menu and don't forget to press the _Select Runs_ button! The scanner may find runs it thinks it can render because data files are present. The scanner does not check for physical data integrity and if the correct values are "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dir = '/data/ASDR/PPMstar/'\n",
     "root_dirs = os.listdir(base_dir)\n",
     "options = []\n",
     "\n",
@@ -107,10 +83,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A tested case: N15 is a RAWD simulation on a 768^3 grid (Stephens et al. 2020)\n",
+    "rprof_dir = \"/data/ASDR/PPMstar/LowZRAWD/N15-LowZRAWD-768-10x-burn-moms/prfs/\"\n",
+    "moms_dir  = \"/data/ASDR/PPMstar/LowZRAWD/N15-LowZRAWD-768-10x-burn-moms/myavsbq/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Mollweide Gui: How to use guide\n",
+    "It is advisable to start with looking at the radial profiles using the `RProf_gui.ipynb` notebook to get an overview of the run.\n",
+    "\n",
     "1) Select the path to the data you wish to examine in dropdown above\\\n",
     "2) Click the `Select Runs` button above\\\n",
     "3) Run the block below to initialize the `Mollweide Gui` for those runs of data\n",
@@ -118,7 +107,19 @@
     "There are 5 sets of controls below in the `Graph Settings` tab, they are the following:\n",
     "- Dump, selects the dump number of the data set\n",
     "- Radius, selected the radius from the center of the start to take the shell which will be projected to the mollweide plot\n",
-    "- Quantity, there are 6 quantities examinable in this GUI. To see which quanties these are see line 12157 of ppm.py\n",
+    "- Quantity, there are 6 quantities examinable in this GUI. These are defined in `get_mollweide_data`, see `quantity =` and calculated in `get_mollweide_data` using the original 10 quantities in the decompressed Moms data. If the decompresssed Moms data have different quantities the GUI may show garbage. Currently these 10 are hardwired to be (we need to write out what variable are decompressed in a way that the MomsData class can read ... ):\n",
+    "| index | quantity            |\n",
+    "|:-----:|:--------------:     |\n",
+    "| 0     | x                   |\n",
+    "| 1     | $\\vec{u_{x}}$                  |   \n",
+    "| 2     | $\\vec{u_{y}}$             | \n",
+    "|  3    | $\\vec{u_{z}}$             | \n",
+    "|  4    | $\\lvert\\vec{u_{t}}\\rvert$         | \n",
+    "|  5    | $\\lvert\\vec{u_{r}}\\rvert$             | \n",
+    "|  6    | $\\lvert\\vec{\\omega}\\rvert$      | \n",
+    "|  7    | P              | \n",
+    "|  8    | rho            | \n",
+    "|  9    | fv             | \n",
     "- Log Value Range/Value Range. Log Value Range applies a limit to the maximum and minimum values logged within the selected data symetrically about the zero and then offsets by log10(min). Value Range just limits the range of unlogged data to show, this will automatically go to min/max of the selected data when switched to from log or when the quantity is switched.\n",
     "\n",
     "There are 3 different types of controls in the `Colour Picker` tab\n",
@@ -129,60 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "437 rprof files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs/.\n",
-      "Dump numbers range from 0 to 436.\n",
-      "438 .aaa files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/myavsbq/.\n",
-      "Dump numbers range from 0 to 437.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d82ddb4b64844db698248b3b760a6012",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=291, continuous_update=False, description='Dump', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8575354ab85f4d3b9c6467873b4e370c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/matplotlib/projections/geo.py:414: RuntimeWarning: invalid value encountered in arcsin\n",
-      "  theta = np.arcsin(y / np.sqrt(2))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get rprof and moms data\n",
     "rprof_data = ppm.RprofSet(rprof_dir)\n",
     "moms_data = ppm.MomsDataSet(moms_dir, 100, rprofset=rprof_data)\n",
+    "# The second argument (100) in the previous call is any actually available dump\n",
+    "# and is only needed for initialization. Dump 100 may not be available, then \n",
+    "# try a different dump, maybe check out RProf_gui notebook first.\n",
     "\n",
     "moms_data.mollweide_gui()"
    ]
