--- a/Demos/Slice_gui.ipynb
+++ b/Demos/Slice_gui.ipynb
@@ -9,34 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/user/scratch14_ppmstar/bamcewan/repos/PyPPM/ppmpy/ppm.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -50,7 +34,7 @@
     "#sys.path.insert(0,'/user/david/PyPPM/')\n",
     "#sys.path.insert(0,'/user/PyPPM/')\n",
     "# sys.path.insert(0,'/home/user/home/PyPPM/')\n",
-    "sys.path.insert(0, '/user/scratch14_ppmstar/bamcewan/repos/PyPPM/')\n",
+    "sys.path.insert(0, '/user/scratch14_ppmstar-lcse/fherwig/PyPPM')\n",
     "from ppmpy import ppm\n",
     "print(inspect.getfile(ppm))\n",
     "\n",
@@ -59,27 +43,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad188e0f58e4034a098a5d736f6496c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('/home/user/data/ASD…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "base_dir = os.getcwd() + '/data/ASDR/PPMstar/'\n",
+    "The next cell will scan the ASDR data and find runs that have the required Moms and Rprof data needed for the Moms GUI. This takes a moment. If you know what you want you can just hardwire the directory variable `rprof_dir` and `moms_dir` and skip this step. Else select a run in the drop-down menu and don't forget to press the _Select Runs_ button! The scanner may find runs it thinks it can render because data files are present. The scanner does not check for physical data integrity and if the correct values are "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dir  = '/data/ASDR/PPMstar/'\n",
     "root_dirs = os.listdir(base_dir)\n",
     "options =[]\n",
     "\n",
@@ -110,10 +86,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A tested case: N15 is a RAWD simulation on a 768^3 grid (Stephens et al. 2020)\n",
+    "rprof_dir = \"/data/ASDR/PPMstar/LowZRAWD/N15-LowZRAWD-768-10x-burn-moms/prfs/\"\n",
+    "moms_dir  = \"/data/ASDR/PPMstar/LowZRAWD/N15-LowZRAWD-768-10x-burn-moms/myavsbq/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Slice Gui: How to use guide\n",
+    "It is advisable to start with looking at the radial profiles using the `RProf_gui.ipynb` notebook to get an overview of the run.\n",
+    "\n",
     "1) Select the path to the data you wish to examine in dropdown above\\\n",
     "2) Click the `Select Runs` button above\\\n",
     "3) Run the block below to initialize the `Slice Gui` for those runs of data\\\n",
@@ -128,48 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "437 rprof files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs/.\n",
-      "Dump numbers range from 0 to 436.\n",
-      "438 .aaa files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/myavsbq/.\n",
-      "Dump numbers range from 0 to 437.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34b5dd4e635e40d1a57237cb189624a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=291, description='Dump', layout=Layout(width='335p…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2b7325259074d749e40d0ad3cb39f5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get rprof and moms data\n",
     "rprof_data = ppm.RprofSet(rprof_dir)\n",
