add comment on interpolation option of slice_gui

--- a/Demos/Slice_gui.ipynb
+++ b/Demos/Slice_gui.ipynb
@@ -112,7 +112,8 @@
     "- Slice, selects the location of the slice on the selected Slice plane. For 192 cubed data for example, the middle of the star will be at Slice 91\n",
     "- Quantity, there are 10 quantities examinable in this GUI. To see which quanties these are see line 11769 of ppm.py\n",
     "- Slice plane, axis in which to take slices upon\n",
-    "- Log Value Range/Value Range. Log Value Range applies a limit to the maximum and minimum values logged within the selected data symetrically about the zero and then offsets by log10(min). Value Range just limits the range of unlogged data to show, this will automatically go to min/max of the selected data when switched to from log or when the quantity is switched."
+    "- Log Value Range/Value Range. Log Value Range applies a limit to the maximum and minimum values logged within the selected data symetrically about the zero and then offsets by log10(min). Value Range just limits the range of unlogged data to show, this will automatically go to min/max of the selected data when switched to from log or when the quantity is switched.\n",
+    "- the uses as default `interpolation='kaiser'` which smoothes the pixelation a bit. You may not want that and use `interpolation=None`. This is an argument to [Matplotlib `imshow`](https://matplotlib.org/3.3.2/api/_as_gen/matplotlib.pyplot.imshow.html)."
    ]
   },
   {
@@ -127,13 +128,6 @@
     "\n",
     "moms_data.slice_gui()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
