update path i RProf_gui

--- a/Demos/RProf_gui.ipynb
+++ b/Demos/RProf_gui.ipynb
@@ -16,24 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,19 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "M200-1000xht-0xdiff-realEOS-768  M36-100x-768\t M43  M46  M54\n",
-      "M29-768\t\t\t\t M37-10000x-768  M44  M47\n",
-      "M35-1536\t\t\t M42\t\t M45  M52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# option of H-core-M25 cases:\n",
     "!ls /data/ASDR/PPMstar/H-core-M25"
@@ -63,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify path to rprofs\n",
-    "cases = ['M36-100x-768',  'M37-10000x-768']\n",
+    "cases = ['M29-768',  'M200-1000xht-0xdiff-realEOS-768']\n",
     "dir_repo    = '/data/ASDR/PPMstar'\n",
     "dir_project = 'H-core-M25'\n",
     "path1 = os.path.join(dir_repo,dir_project,cases[0],'prfs') \n",
@@ -77,42 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1574 rprof files found in '/data/ASDR/PPMstar/H-core-M25/M36-100x-768/prfs/.\n",
-      "Dump numbers range from 0 to 1573.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26081fda2bef4d2cb24015e6e710e259",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=52, description='dump1', max=1573), IntSlider(value=1546, description='d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'M36-100x-768')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rp1 = ppm.RprofSet(path1)\n",
     "rp1.rprofgui(ifig=1)\n",
@@ -121,42 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3821 rprof files found in '/data/ASDR/PPMstar/H-core-M25/M37-10000x-768/prfs/.\n",
-      "Dump numbers range from 0 to 3820.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01ecc999f1a540e0b3d2860536ff0fa3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=127, description='dump1', max=3820), IntSlider(value=3756, description='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'M37-10000x-768')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rp2 = ppm.RprofSet(path2)\n",
     "rp2.rprofgui(ifig=2)\n",
@@ -177,60 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FV', 'FV0', 'P0', 'P1', 'R', 'Rho0', 'Rho1', 'T9']\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bb56f3dd1b641f6a65b23c02ee8e72e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FV', 'FV0', 'P0', 'P1', 'R', 'Rho0', 'Rho1', 'T9']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/ppmpy/ppm.py:9387: RuntimeWarning: divide by zero encountered in log10\n",
-      "  if logy: yquantity = np.log10(yquantity)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ifig=12;close(ifig);figure(ifig)\n",
     "dumps = list(range(200,401,200))\n",
