update notebooks: clean path and other minor fixes

--- a/Demos/RProf_gui.ipynb
+++ b/Demos/RProf_gui.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ppmpy import ppm   # github version v0.92 (Nov 26, 2019)\n",
+    "from ppmpy import ppm   \n",
     "import os"
    ]
   },
