--- a/Demos/rprof_demo.ipynb
+++ b/Demos/rprof_demo.ipynb
@@ -16,15 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%pylab ipympl"
    ]
   },
@@ -51,9 +42,11 @@
    "outputs": [],
    "source": [
     "import os,sys\n",
-    "ppmpy_dir = '/user/scratch14_ppmstar-lcse/fherwig/PyPPM'\n",
-    "sys.path.insert(0,ppmpy_dir)  \n",
-    "from ppmpy import ppm   "
+    "# in case you want to use your own clone of PyPPM\n",
+    "# ppmpy_dir = '/user/somedir/username/PyPPM'\n",
+    "# sys.path.insert(0,ppmpy_dir)  \n",
+    "from ppmpy import ppm   \n",
+    "# print(inspect.getfile(ppm))"
    ]
   },
   {
@@ -675,22 +668,6 @@
     "    tight_layout()\n",
     "    savefig(\"NDump-\"+var+\".pdf\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
