1st draft all nbs iRAWD-ATS paper

--- a/iRAWD-ATS_Stephens+21/Hydro-Results.ipynb
+++ b/iRAWD-ATS_Stephens+21/Hydro-Results.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make all hydro plots \n",
-    "Stephens+ 2021\n"
+    "# Make all hydro plots "
    ]
   },
   {
