--- a/iRAWD-ATS_Stephens+21/Lagrangian_diffusion_analysis-make-shell-files.ipynb
+++ b/iRAWD-ATS_Stephens+21/Lagrangian_diffusion_analysis-make-shell-files.ipynb
@@ -5,11 +5,7 @@
    "metadata": {},
    "source": [
     "# Diffusion coeefficient analysis \n",
-    "This notebook performs a diffusion coefficient analysis and adds the resulting D profiles to the shell files that are input to NuGrid's `mppnp` code for optional post-processing with diffusive mixing (instead of ATS mixing). \n",
-    "\n",
-    "* astrohub: `cyberhubs/ppmstarhub:1.2.6` \n",
-    "* primary auhthor: FH\n",
-    "* pwd: `'/user/scratch14_csa/fherwig/repos/3d1d-advection-paper/notebooks/Diffusion'`"
+    "This notebook performs a diffusion coefficient analysis and adds the resulting D profiles to the shell files that are input to NuGrid's `mppnp` code for optional post-processing with diffusive mixing (instead of ATS mixing). "
    ]
   },
   {
@@ -32,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pylab ipympl\n",
-    "# %pylab inline\n",
+    "# %pylab ipympl\n",
+    "%pylab inline\n",
     "import sys, os\n",
     "\n",
     "pyppm_git = \"2f1ff06\" # github commit\n",
