--- a/iRAWD-ATS_Stephens+21/D-vr-FV-compare.ipynb
+++ b/iRAWD-ATS_Stephens+21/D-vr-FV-compare.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bottom panel of Dig 1 in Stephens+ 2020\n",
-    "Astrohub: `cyberhubs/ppmstarhub:1.2.6` "
+    "# Bottom panel of Dig 1 in Stephens+ 2020"
    ]
   },
   {
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
